--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,31 @@
-# Node
-node_modules
-dist
+# Node modules
+node_modules/
+
+# Vite build output
+dist/
+build/
+
+# Local environment variables
 .env
 .env.local
+.env.*.local
+
+# IDE/editor folders
+.vscode/
+.idea/
+*.swp
+
+# MacOS system files
 .DS_Store
-.vscode
-*.log
 
-# Vite
-.cache
-.idea
-*.tsbuildinfo
-
-# Mac system files
-*.DS_Store
-
-# Logs
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# Output from build tools
-coverage
-.env.local
+# Coverage
+coverage/
+
+# TypeScript
+*.tsbuildinfo
