--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.2",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "react": "^19.1.0",
@@ -9,10 +12,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "clean:maple": "ts-node scripts/cleanMapleReferences.ts",
+    "scan:maple": "ts-node scripts/scanMapleReferences.ts",
+    "rename:maple": "ts-node scripts/renameMapleReferences.ts",
+    "fix:imports": "ts-node scripts/fixBrokenImports.ts",
+    "audit:maple": "node scripts/auditMapleResiduals.js",
+    "audit:term": "node scripts/auditByTerm.js"
   },
   "devDependencies": {
+    "@types/node": "^22.15.3",
     "@vitejs/plugin-react": "^4.4.1",
+    "ts-node": "^10.9.2",
     "vite": "^6.3.3"
   }
 }
