--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dotenv": "^16.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^6.30.0"
+    "react-router-dom": "^6.30.0",
+    "uuid": "^11.1.0"
   },
   "scripts": {
     "dev": "vite",
@@ -18,10 +19,13 @@
     "rename:maple": "ts-node scripts/renameMapleReferences.ts",
     "fix:imports": "ts-node scripts/fixBrokenImports.ts",
     "audit:maple": "node scripts/auditMapleResiduals.js",
-    "audit:term": "node scripts/auditByTerm.js"
+    "audit:term": "node scripts/auditByTerm.js",
+    "eval:visits": "node scripts/runVisitEval.js"
   },
   "devDependencies": {
     "@types/node": "^22.15.3",
+    "@types/react-dom": "^19.1.3",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.4.1",
     "ts-node": "^10.9.2",
     "vite": "^6.3.3"
