--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@mui/material": "^7.0.2",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "langfuse": "^3.37.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.0",
