--- a/tsconfig.eval.json
+++ b/tsconfig.eval.json
@@ -6,8 +6,11 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "target": "ES2020",
-    "types": ["node"]
+    "types": ["node"],
+    "allowJs": true,
+    "checkJs": false,
+    "noImplicitAny": false
   },
-  "include": ["scripts/**/*.ts", "evals/**/*.ts"]
+  "include": ["scripts/**/*", "evals/**/*"]
 }
 
