--- a/package.json
+++ b/package.json
@@ -2,19 +2,24 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^8.2.0",
+    "@types/recharts": "^1.8.29",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "langfuse": "^3.37.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.0",
+    "recharts": "^2.15.3",
     "uuid": "^11.1.0"
   },
   "scripts": {
     "eval:all": "node scripts/evalAll.js",
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview",
     "clean:maple": "ts-node scripts/cleanMapleReferences.ts",
     "scan:maple": "ts-node scripts/scanMapleReferences.ts",
@@ -25,13 +30,16 @@
     "eval:visits": "node scripts/runVisitEval.js",
     "test:visit-alerts": "node scripts/testVisitAlerts.js",
     "test:visit-structured": "node scripts/testStructuredVisit.js",
-    "eval:structured": "ts-node-esm --project tsconfig.eval.json scripts/runAllEvals.ts"
+    "eval:structured": "ts-node-esm --project tsconfig.eval.json scripts/runAllEvals.ts",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "clean": "rimraf dist"
   },
   "devDependencies": {
     "@types/node": "^22.15.3",
     "@types/react-dom": "^19.1.3",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.4.1",
+    "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
