--- a/package.json
+++ b/package.json
@@ -32,14 +32,19 @@
     "test:visit-structured": "node scripts/testStructuredVisit.js",
     "eval:structured": "ts-node-esm --project tsconfig.eval.json scripts/runAllEvals.ts",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "test": "jest --cache"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.15.3",
     "@types/react-dom": "^19.1.3",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.4.1",
+    "jest": "^29.7.0",
     "rimraf": "^5.0.5",
+    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
