feat: dashboard de actividad por paciente en /admin/activity

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "langfuse": "^3.37.2",
+    "langfuse-node": "^3.37.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.0",
