--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/x-date-pickers": "^8.2.0",
+    "@tanstack/react-query": "^5.75.1",
+    "@types/papaparse": "^5.3.15",
     "@types/recharts": "^1.8.29",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "langfuse": "^3.37.2",
     "langfuse-node": "^3.37.2",
+    "lucide-react": "^0.507.0",
+    "papaparse": "^5.5.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.0",
