--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.0.2",
-    "@mui/material": "^7.0.2",
-    "@mui/x-date-pickers": "^8.2.0",
-    "@tanstack/react-query": "^5.75.1",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
+    "@mui/x-date-pickers": "^6.19.4",
+    "@tanstack/react-query": "^5.20.5",
     "@types/papaparse": "^5.3.15",
     "@types/recharts": "^1.8.29",
-    "axios": "^1.9.0",
-    "date-fns": "^4.1.0",
-    "dotenv": "^16.5.0",
-    "langfuse": "^3.37.2",
-    "langfuse-node": "^3.37.2",
-    "lucide-react": "^0.507.0",
-    "papaparse": "^5.5.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^6.30.0",
-    "recharts": "^2.15.3",
-    "uuid": "^11.1.0"
+    "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
+    "dotenv": "^16.4.4",
+    "langfuse": "^2.7.0",
+    "langfuse-node": "^2.7.0",
+    "lucide-react": "^0.330.0",
+    "next": "14.1.0",
+    "next-auth": "^4.24.5",
+    "papaparse": "^5.4.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.22.1",
+    "recharts": "^2.12.0",
+    "uuid": "^9.0.1"
   },
   "scripts": {
     "eval:all": "node scripts/evalAll.js",
@@ -41,18 +43,23 @@
     "test": "jest --cache"
   },
   "devDependencies": {
+    "@eslint/js": "^9.26.0",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.15.3",
     "@types/react-dom": "^19.1.3",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
     "@vitejs/plugin-react": "^4.4.1",
+    "eslint": "^9.26.0",
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.31.1",
     "vite": "^6.3.3"
   },
   "type": "module"
