--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,15 +6,20 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  VITE_LANGFUSE_HOST: 'https://cloud.langfuse.com'
+  NEXTAUTH_URL: 'http://localhost:3000'
+  NODE_ENV: 'production'
+
 jobs:
   lint-and-test:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
     
     - name: Setup Node.js
-      uses: actions/setup-node@v4
+      uses: actions/setup-node@v3
       with:
         node-version: '18'
         cache: 'npm'
@@ -26,7 +31,7 @@ jobs:
       run: |
         echo "::group::Verificando variables de entorno"
         missing_vars=()
-        for var in VITE_LANGFUSE_PUBLIC_KEY VITE_LANGFUSE_SECRET_KEY VITE_LANGFUSE_HOST NEXTAUTH_SECRET NEXTAUTH_URL; do
+        for var in VITE_LANGFUSE_PUBLIC_KEY VITE_LANGFUSE_SECRET_KEY NEXTAUTH_SECRET; do
           if [ -z "${!var}" ]; then
             missing_vars+=($var)
           fi
@@ -56,13 +61,11 @@ jobs:
       run: npm run test
     
     - name: Build
-      run: npm run build
       env:
-        VITE_LANGFUSE_PUBLIC_KEY: ${{ secrets.VITE_LANGFUSE_PUBLIC_KEY || 'DUMMY_KEY' }}
-        VITE_LANGFUSE_SECRET_KEY: ${{ secrets.VITE_LANGFUSE_SECRET_KEY || 'DUMMY_KEY' }}
-        VITE_LANGFUSE_HOST: ${{ secrets.VITE_LANGFUSE_HOST || 'https://cloud.langfuse.com' }}
-        NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET || 'DUMMY_SECRET' }}
-        NEXTAUTH_URL: ${{ secrets.NEXTAUTH_URL || 'http://localhost:3000' }}
+        VITE_LANGFUSE_PUBLIC_KEY: ${{ secrets.VITE_LANGFUSE_PUBLIC_KEY }}
+        VITE_LANGFUSE_SECRET_KEY: ${{ secrets.VITE_LANGFUSE_SECRET_KEY }}
+        NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+      run: npm run build
 
   deploy:
     needs: lint-and-test
@@ -70,10 +73,10 @@ jobs:
     if: github.ref == 'refs/heads/main'
     
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
     
     - name: Deploy to Vercel
-      uses: amondnet/vercel-action@v25
+      uses: amondnet/vercel-action@v20
       with:
         vercel-token: ${{ secrets.VERCEL_TOKEN }}
         vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
