--- a/package.json
+++ b/package.json
@@ -2,21 +2,30 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@mui/x-date-pickers": "^6.20.2",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-radio-group": "^1.3.4",
+    "@radix-ui/react-slot": "^1.2.0",
     "@tanstack/react-query": "^5.20.5",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/next": "^8.0.7",
     "@types/papaparse": "^5.3.15",
+    "@types/react": "^19.1.2",
     "@types/recharts": "^1.8.29",
     "axios": "^1.6.7",
+    "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.4",
     "langfuse": "^2.7.0",
     "langfuse-node": "^2.7.0",
     "lucide-react": "^0.330.0",
-    "next": "14.1.0",
-    "next-auth": "^4.24.5",
+    "next": "^14.1.0",
+    "next-auth": "^4.24.11",
     "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
