--- a/package.json
+++ b/package.json
@@ -9,49 +9,72 @@
     "lint": "eslint . --ext ts,tsx,js --fix",
     "preview": "vite preview",
     "health-check": "node scripts/health-check.js",
-    "lint:report": "eslint . --ext ts,tsx,js --output-file ./docs/eslint-report.json --format json"
+    "lint:report": "eslint . --ext ts,tsx,js --output-file ./docs/eslint-report.json --format json",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^2.2.2",
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@mui/x-date-pickers": "^8.2.0",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-radio-group": "^1.3.4",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-tabs": "^1.1.9",
     "@radix-ui/react-toast": "^1.2.11",
+    "@tanstack/react-query": "^5.75.1",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "langfuse": "^3.37.2",
     "langfuse-node": "^3.37.2",
+    "lucide-react": "^0.507.0",
     "next-auth": "^4.24.11",
+    "papaparse": "^5.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
-    "tailwind-merge": "^3.2.0"
+    "recharts": "^2.15.3",
+    "tailwind-merge": "^3.2.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
+    "@tailwindcss/postcss": "^4.1.5",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/cypress": "^10.0.3",
     "@types/axios": "^0.9.36",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.11.19",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
+    "cssnano": "^7.0.6",
     "cypress": "^14.3.2",
+    "dotenv": "^16.5.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "node-fetch": "^3.3.2",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.0",
+    "postcss": "^8.5.3",
+    "postcss-import": "^16.1.0",
+    "postcss-nesting": "^13.0.1",
+    "tailwindcss": "^4.1.5",
     "tailwindcss-animate": "^1.0.7",
+    "terser": "^5.39.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
   }
