--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,10 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "types": ["node"]
+    "types": ["node", "vite/client", "react", "react-dom"],
+    "incremental": true
   },
-  "include": ["src", "scripts"],
+  "include": ["src", "scripts", "vite.config.ts"],
+  "exclude": ["node_modules", "dist"],
   "references": [{ "path": "./tsconfig.node.json" }]
 } 
