fix: simplify vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -70,8 +70,6 @@
     }
   },
   "rewrites": [
-    { "source": "/api/auth/:path*", "destination": "/api/auth/:path*" },
-    { "source": "/api/:path*", "destination": "/api/:path*" },
     { "source": "/(.*)", "destination": "/index.html" }
   ],
   "headers": [
@@ -108,9 +106,7 @@
   "env": {
     "VITE_LANGFUSE_PUBLIC_KEY": "pk-lf-57c6e2ec-8603-44cf-b030-cddcef1f1f3d",
     "VITE_LANGFUSE_SECRET_KEY": "sk-lf-c1872960-86af-4899-b275-b7de8d536794",
-    "VITE_LANGFUSE_BASE_URL": "https://cloud.langfuse.com",
-    "NEXTAUTH_SECRET": "@nextauth_secret",
-    "NEXTAUTH_URL": "https://aiduxcare-test.vercel.app"
+    "VITE_LANGFUSE_BASE_URL": "https://cloud.langfuse.com"
   },
   "build": {
     "env": {
