--- a/vercel.json
+++ b/vercel.json
@@ -3,21 +3,35 @@
   "routes": [
     {
       "src": "/api/auth/(.*)",
-      "dest": "/api/auth/$1"
+      "dest": "/api/auth/$1",
+      "headers": {
+        "Content-Type": "application/json",
+        "Cache-Control": "no-store, max-age=0",
+        "Access-Control-Allow-Credentials": "true",
+        "Access-Control-Allow-Origin": "https://aiduxcare-muhku3co6-mauricio-sobarzos-projects.vercel.app",
+        "Access-Control-Allow-Methods": "GET,OPTIONS,PATCH,DELETE,POST,PUT",
+        "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+      }
     },
     {
       "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "dest": "/api/$1",
+      "headers": {
+        "Cache-Control": "no-store, max-age=0"
+      }
     },
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "/index.html",
+      "headers": {
+        "Cache-Control": "public, max-age=0, must-revalidate"
+      }
     }
   ],
   "env": {
+    "NEXTAUTH_URL": "https://aiduxcare-muhku3co6-mauricio-sobarzos-projects.vercel.app",
     "VITE_LANGFUSE_PUBLIC_KEY": "pk-lf-57c6e2ec-8603-44cf-b030-cddcef1f1f3d",
     "VITE_LANGFUSE_SECRET_KEY": "sk-lf-c1872960-86af-4899-b275-b7de8d536794",
-    "VITE_LANGFUSE_BASE_URL": "https://cloud.langfuse.com",
-    "NEXTAUTH_URL": "https://aiduxcare-njmx5x3b1-mauricio-sobarzos-projects.vercel.app"
+    "VITE_LANGFUSE_BASE_URL": "https://cloud.langfuse.com"
   }
 } 
