✅ Cierre v1.12 validado: tests, limpieza, entorno

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -17,6 +17,7 @@
     "vite.config.ts",
     "scripts",
     "src/core/data/seed/**/*",
-    "src/core/lib/**/*"
+    "src/core/lib/**/*",
+    "src/core/schemas/**/*"
   ]
 } 
