🔐 v1.13: Autenticación real con Supabase completa

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.75.2",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "axios": "^1.6.7",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
@@ -27,6 +28,7 @@
     "langfuse": "^2.7.0",
     "langfuse-node": "^2.7.0",
     "lucide-react": "^0.330.0",
+    "next": "^15.3.1",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
