--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aiduxcare",
-  "version": "1.8.0",
+  "version": "1.16.0",
   "type": "module",
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -15,7 +15,6 @@
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.75.2",
     "@testing-library/react": "^16.3.0",
-    "@testing-library/react-hooks": "^8.0.1",
     "axios": "^1.6.7",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
@@ -43,9 +42,15 @@
   },
   "scripts": {
     "eval:all": "node scripts/evalAll.js",
+    "start": "vite --port 5176 --strictPort --force",
     "dev": "vite --port 5176 --strictPort --force",
-    "dev:all": "concurrently \"node simple-server.mjs\" \"npm run dev\"",
+    "dev:all": "concurrently --kill-others \"node simple-server-direct.mjs\" \"npm run start\"",
+    "free-ports": "bash scripts/freeAllPorts.sh",
+    "setup-env": "node scripts/setupEnv.mjs",
+    "setup": "node scripts/setup.mjs",
+    "pre-dev": "npm run free-ports && npm run setup-env",
     "build": "tsc && vite build",
+    "build:safe": "vite build",
     "preview": "vite preview",
     "clean:maple": "ts-node scripts/cleanMapleReferences.ts",
     "scan:maple": "ts-node scripts/scanMapleReferences.ts",
@@ -57,22 +62,25 @@
     "test:visit-alerts": "node scripts/testVisitAlerts.js",
     "test:visit-structured": "node scripts/testStructuredVisit.js",
     "eval:structured": "ts-node-esm --project tsconfig.eval.json scripts/runAllEvals.ts",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives",
     "clean": "rimraf dist",
-    "test": "vitest",
+    "test": "vitest run",
     "test:unit": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:clinical-flow": "tsx scripts/testClinicalFlow.ts",
     "test:clinical-flow:watch": "tsx watch scripts/testClinicalFlow.ts",
-    "api": "node simple-server.mjs",
+    "api": "node simple-server-direct.mjs",
     "test:e2e": "vitest run src/tests/e2e/**/*.test.ts",
     "check:env": "tsx scripts/checkEnv.ts",
     "seed:supabase": "tsx scripts/seedToSupabase.ts",
-    "api:mock": "tsx scripts/devApiWithEnv.ts"
+    "api:mock": "node simple-server-direct.mjs",
+    "safe-dev": "npm run pre-dev && npm run dev:all",
+    "quickstart": "bash run.sh"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
     "@testing-library/dom": "^10.4.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/babel__core": "^7.20.5",
     "@types/babel__generator": "^7.27.0",
     "@types/babel__template": "^7.4.4",
@@ -93,7 +101,7 @@
     "@types/istanbul-reports": "^3.0.4",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
-    "@types/node": "^22.15.3",
+    "@types/node": "^22.15.16",
     "@types/parse-json": "^4.0.2",
     "@types/prop-types": "^15.7.14",
     "@types/react": "^19.1.3",
