--- a/package.json
+++ b/package.json
@@ -75,12 +75,12 @@
     "seed:supabase": "tsx scripts/seedToSupabase.ts",
     "api:mock": "node simple-server-direct.mjs",
     "safe-dev": "npm run pre-dev && npm run dev:all",
-    "quickstart": "bash run.sh"
+    "quickstart": "bash run.sh",
+    "vercel-build": "npm install --legacy-peer-deps && npm run build:safe"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/react-hooks": "^8.0.1",
     "@types/babel__core": "^7.20.5",
     "@types/babel__generator": "^7.27.0",
     "@types/babel__template": "^7.4.4",
