✅ MCP FastAPI funcionando en entorno real - versión v1.21.0

--- a/mcp_server/requirements.txt
+++ b/mcp_server/requirements.txt
@@ -3,8 +3,12 @@ uvicorn>=0.23.2
 pydantic>=2.4.0
 pydantic-settings>=2.0.3
 python-dotenv>=1.0.0
+loguru>=0.7.0
 langchain-core>=0.1.0
 langchain-openai>=0.0.3
 langgraph>=0.0.15
 httpx>=0.25.0
-pytest>=7.4.0 
+pytest>=7.4.0
+python-multipart>=0.0.6
+tenacity>=8.2.3
+gunicorn>=21.2.0 
