🔐 fix: Corrección de import MemorySaver y verificación completa v1.23.0

--- a/mcp_server/env.example
+++ b/mcp_server/env.example
@@ -13,6 +13,11 @@ MAX_TOKENS=2000
 # API Keys (reemplazar con valores reales)
 OPENAI_API_KEY=sk-your-openai-api-key-here
 
+# Langfuse - Trazabilidad y monitoreo de LLM
+LANGFUSE_HOST=https://cloud.langfuse.com
+LANGFUSE_PUBLIC_KEY=pk-lf-
+LANGFUSE_SECRET_KEY=sk-lf-
+
 # Configuración del servidor
 PORT=8000
 HOST=0.0.0.0 
