--- a/mcp_server/env.example
+++ b/mcp_server/env.example
@@ -18,6 +18,10 @@ LANGFUSE_HOST=https://cloud.langfuse.com
 LANGFUSE_PUBLIC_KEY=pk-lf-
 LANGFUSE_SECRET_KEY=sk-lf-
 
+# Supabase - Persistencia de datos
+SUPABASE_URL=https://xxxxxxxxxxxxx.supabase.co
+SUPABASE_KEY=your-supabase-key-here
+
 # Configuración del servidor
 PORT=8000
 HOST=0.0.0.0 
