--- a/mcp_server/env.example
+++ b/mcp_server/env.example
@@ -1,27 +1,37 @@
-# Configuración general
-DEBUG=false
-ENVIRONMENT=production  # production, development, testing
+# === SUPABASE ===
+SUPABASE_URL=https://[TU_DOMINIO_SUPABASE].supabase.co
+SUPABASE_SERVICE_ROLE_KEY=sk_[TU_SERVICE_ROLE_KEY]
 
-# Configuración CORS
+# === ANTHROPIC (Claude) ===
+ANTHROPIC_API_KEY=sk-ant-api03-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+MODEL_PROVIDER=anthropic
+DEFAULT_MODEL=claude-3-sonnet-20240229
+
+# === LANGFUSE ===
+LANGFUSE_PUBLIC_KEY=pk-lf-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+LANGFUSE_SECRET_KEY=sk-lf-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+LANGFUSE_HOST=https://cloud.langfuse.com
+
+# === MCP SERVER ===
+PORT=8001
+ENABLE_TRACE=true
+DEBUG=false
+ENVIRONMENT=production
+LOG_LEVEL=INFO
+
+# === CORS ===
 CORS_ORIGINS=http://localhost:3000,https://aiduxcare.vercel.app
 
-# Configuración LLM
-LLM_MODEL=gpt-3.5-turbo
+# === APPLICATION ===
+APP_NAME=MCP Server - AiDuxCare
+API_VERSION=v1.29.0
+
+# Configuración general
 TEMPERATURE=0.7
 MAX_TOKENS=2000
 
 # API Keys (reemplazar con valores reales)
 OPENAI_API_KEY=sk-your-openai-api-key-here
 
-# Langfuse - Trazabilidad y monitoreo de LLM
-LANGFUSE_HOST=https://cloud.langfuse.com
-LANGFUSE_PUBLIC_KEY=pk-lf-
-LANGFUSE_SECRET_KEY=sk-lf-
-
-# Supabase - Persistencia de datos
-SUPABASE_URL=https://xxxxxxxxxxxxx.supabase.co
-SUPABASE_KEY=your-supabase-key-here
-
 # Configuración del servidor
-PORT=8000
 HOST=0.0.0.0 
