--- a/mcp_server/requirements.txt
+++ b/mcp_server/requirements.txt
@@ -6,10 +6,13 @@ python-dotenv>=1.0.0
 loguru>=0.7.0
 langchain-core>=0.1.0
 langchain-openai>=0.0.3
+langchain-anthropic>=0.1.1
+anthropic>=0.7.0
 langgraph>=0.0.15
 httpx>=0.25.0
 pytest>=7.4.0
 python-multipart>=0.0.6
 tenacity>=8.2.3
 gunicorn>=21.2.0
-langfuse>=2.0.0 
+langfuse>=2.0.0
+supabase>=2.1.0 
