--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "api:mock": "node simple-server-direct.mjs",
     "safe-dev": "npm run pre-dev && npm run dev:all",
     "quickstart": "bash run.sh",
-    "vercel-build": "npm ci --omit=dev --legacy-peer-deps && vite build"
+    "vercel-build": "vite build"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
