--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "framework": "vite",
-  "buildCommand": "vite build",
+  "buildCommand": "CI=false vite build",
   "outputDirectory": "dist",
   "routes": [
     { "handle": "filesystem" },
