--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.17.0",
   "type": "module",
   "dependencies": {
-    "@auth/core": "^0.34.2",
+    "@auth/core": "^0.39.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
@@ -27,9 +27,10 @@
     "express": "^5.1.0",
     "i18next": "^25.0.2",
     "langfuse": "^2.7.0",
+    "langfuse-core": "^3.37.2",
     "langfuse-node": "^2.7.0",
     "lucide-react": "^0.330.0",
-    "next-auth": "^4.24.11",
+    "next-auth": "^4.24.7",
     "papaparse": "^5.4.1",
     "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
@@ -138,7 +139,7 @@
     "eslint-plugin-import": "^2.31.0",
     "jest": "^29.7.0",
     "jsdom": "^26.1.0",
-    "next": "^15.3.2",
+    "next": "^14.2.28",
     "postcss": "^8.5.3",
     "rimraf": "^5.0.5",
     "supabase": "^2.22.12",
@@ -149,9 +150,9 @@
     "tsd": "^0.28.0",
     "tsx": "^4.19.4",
     "typescript-eslint": "^8.31.1",
-    "vite": "^5.4.19",
+    "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^1.6.1"
+    "vitest": "^3.1.3"
   },
   "vitest": {
     "exclude": [
